# sand_simulation

./: Cargo.toml  LICENSE  README.md
src/: main.rs  sand_simulator.rs  vec.rs
