[package]
name = "sand_simulator"
version = "0.1.0"
authors = ["Mapet <jakubsordyl1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
sdl2 = { version = "0.34.1", features = ["bundled", "static-link"] }
rand = "0.7.3"